--- a/TourismApp/src/main/resources/application.properties
+++ b/TourismApp/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+server.port=4000
+
+#oracle settings
+spring.datasource.url=jdbc:mysql://localhost:3306/HOLIDAYPORIUM?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=
+spring.datasource.password=
+server.servlet.context-path=/HolidayPorium_Server
+
+#logging
+#logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
+logging.file=logs/error.log
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+server.error.whitelabel.enabled=false
+logging.level.org.hibernate.type=info
+
+#hibernate
+spring.jpa.properties.hibernate.show_sql: true
 
